# automated-tutorials

./: .gitignore  DSSensei.code-workspace  README.md  main.py  plan.md  pyproject.toml
config/: pipeline.yaml
docs/: azure-setup-guide.md
outputs/2026-04-17-hooks-for-harness-engineering/00_research/: research.json
outputs/2026-04-17-hooks-for-harness-engineering/01_script/: script.json
outputs/2026-04-17-hooks-for-harness-engineering/02_voice/: timing_manifest.json  tutorial.srt
outputs/2026-04-17-hooks-for-harness-engineering/03_screen/: concat_list.txt  demo_script.py
outputs/2026-04-17-hooks-for-harness-engineering/06_critique/: critique.json
outputs/2026-04-17-the-r-p-i-workflow-using-hve/00_research/: research.json
prompts/: tutorial_planner.jinja2  tutorial_section.jinja2  tutorial_system.jinja2  tutorial_user.jinja2
scripts/: debug_matching.py  inspect_shots.py  regen_visuals.py  trim_and_regen.py
src/: captions.py  ffmpeg_helpers.py  make_tutorial.py  models.py  preflight.py  quality_gates.py  slide_renderer.py  ssml_builder.py  stage_critique.py  stage_edit.py  stage_record.py  stage_research.py  stage_script.py  stage_tts.py  visual_engine.py  vscode_scenes.py
tests/: conftest.py  test_make_tutorial.py  test_preflight.py  test_quality_gates.py  test_ssml_builder.py  test_stage_critique.py  test_stage_edit.py  test_stage_record.py  test_stage_research.py  test_stage_script.py  test_stage_tts.py
tests/test_integration/: conftest.py  test_ffmpeg_smoke.py  test_live_api.py  test_timing_manifest.py
(+13 files in other folders)
